Fixed word wrap and hover on li and li buttons

--- a/todo-app-main/styles.css
+++ b/todo-app-main/styles.css
@@ -54,6 +54,11 @@ header {
   color: white;
 }
 
+#mode-btn:hover {
+  cursor: pointer;
+  transform: scale(1.2);
+  transition: 1s ease-in-out;
+}
 /* Main content styles */
 
 .main-content {
@@ -111,8 +116,8 @@ ul {
 }
 
 .item-text {
-  width: 60%;
-  word-wrap: none;
+  width: 80%;
+  word-wrap: break-word;
 }
 
 .cross {
@@ -128,6 +133,10 @@ ul {
 .item-text:hover,
 .cross:hover {
   cursor: pointer;
+}
+.cross:hover {
+  transform: scale(1.3);
+  transition: 1.1s;
 }
 /* Bottom section styles */
 
@@ -181,6 +190,11 @@ ul {
   font-size: 0.8rem;
   padding-top: 2rem;
 }
+
+#clear-btn:hover {
+  color: var(--primary-bright-blue);
+}
+
 /* Transformation styles */
 
 .dragging {
@@ -245,6 +259,11 @@ ul {
 }
 
 /* Media Styles */
+@media screen and (min-width: 500px) {
+  .item-text {
+    width: 60%;
+  }
+}
 
 @media (min-width: 700px) {
   .main-content {
